# exercise-mvc

./: .fastapi-mvc.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst  install.rst  usage.rst
exercise_mvc/: __init__.py  __main__.py  version.py  wsgi.py
exercise_mvc/app/: __init__.py  asgi.py  router.py
exercise_mvc/app/controllers/: ready.py
exercise_mvc/app/exceptions/: __init__.py
exercise_mvc/app/utils/: __init__.py
exercise_mvc/app/views/: __init__.py
exercise_mvc/cli/: __init__.py  cli.py  serve.py
exercise_mvc/config/: __init__.py  application.py
exercise_mvc/db/: config.py
exercise_mvc/db/models/: __init__.py
tests/integration/: conftest.py
tests/integration/app/controllers/: test_ready.py
tests/unit/: conftest.py  test_wsgi.py
tests/unit/app/: test_asgi.py
tests/unit/app/exceptions/: test_http.py
tests/unit/app/utils/: test_aiohttp_client.py
tests/unit/app/views/: test_error.py  test_ready.py
tests/unit/cli/: test_cli.py  test_serve.py  test_utils.py
