[tool.poetry]
name = "exercise-mvc"
version = "0.1.0"
description = "This project was generated with fastapi-mvc."
authors = ["TianaNanta <andrianjakananta@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TianaNanta/exercise-mvc"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "~0.89.1"
uvicorn = {extras = ["standard"], version = "~0.20.0"}
gunicorn = "~20.1.0"
click = "~8.1.3"
aiohttp = "~3.8.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
tortoise-orm = {extras = ["asyncmy"], version = "^0.19.3"}
aerich = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "~7.2.1"
pytest-cov = "~4.0.0"
pytest-asyncio = "~0.20.3"
requests = "~2.28.2"
httpx = "~0.23.3"
aioresponses = "~0.7.3"
flake8 = "~5.0.4"
flake8-docstrings = "~1.6.0"
flake8-import-order = "~0.18.1"
flake8-todo = "^0.7"
black = "~23.1.0"
Sphinx = "~5.3.0"
Pallets-Sphinx-Themes = "~2.0.2"
myst-parser = "~0.18.1"

[tool.poetry.scripts]
exercise-mvc = 'exercise_mvc.cli:cli'

[tool.poetry.urls]
"Issues" = "https://github.com/TianaNanta/exercise-mvc/issues"

[tool.poetry.group.dev.dependencies]
fastapi-mvc = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "exercise_mvc/config/gunicorn.py",
    "exercise_mvc/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pass",
]
